--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
             <!-- grant location container -->
             <div class="sub-container grant-location-container">
-                <img src="./assets/location.png" alt="" width="80" height="80" loading="lazy">
+                <img src="./location.png" alt="" width="80" height="80" loading="lazy">
                 <p>Grant Location Access</p>
                 <p>Allow Access to get Weather Information</p>
                 <button class="btn" data-grantAccess >Grant Access</button>
