--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
             <form class="form-container" data-searchForm>
                 <input placeholder="Search for city..." data-searchInput>
                     <button class="btn" type="submit">
-                    <img src="./assets/search.png"width="20" height="20" loading="lazy" >
+                    <img src="./search.png"width="20" height="20" loading="lazy" >
                 </button>
             </form>
 
                 <!-- loading screen -->
 
             <div class="sub-container loading-container">
-                <img src="./assets/loading.gif" width="150" height="150" loading="lazy" alt="">
+                <img src="./loading.gif" width="150" height="150" loading="lazy" alt="">
                 <p>Loading</p>   
             </div>
 
@@ -59,14 +59,14 @@
                 <div class="parameter-container">
                         <!-- card 1  -->
                     <div class="parameter">
-                        <img src="./assets/wind.png" alt="">
+                        <img src="./wind.png" alt="">
                         <p>WINDSPEED</p>
                         <p data-windSpeed></p>
                     </div>
 
                         <!-- card 2 -->
                     <div class="parameter">
-                        <img src="./assets/humidity.png" alt="">
+                        <img src="./humidity.png" alt="">
                         <p>HUMIDITY</p>
                         <p data-humidity></p>
                     </div>
@@ -74,7 +74,7 @@
                         <!-- card 3 -->
 
                     <div class="parameter">
-                        <img src="./assets/cloud.png" alt="">
+                        <img src="./cloud.png" alt="">
                         <p>CLOUDS</p>
                         <p data-cloudiness></p>
                     </div>
